--- a/style.css
+++ b/style.css
@@ -1,234 +1,87 @@
 * {
-  margin: 0;
-  padding: 0;
-  font-family: Arvo;
+  box-sizing: border-box;
+  font-family: monospace;
 }
 
-body {
-  color: #FFFFFF;
-  background: linear-gradient(90deg, #000000, #232323, #000000);
-  border-radius: 10px;
-}
-
-ul {
+div ul {
+  display: inline-block;
   list-style-type: none;
 }
 
-a {
-  color: white;
-  text-decoration: none;
-  font-size: 21px;
+div li {
+  padding: 20px;
+  float: left;
 }
 
-a:hover {
-  color: springgreen;
-  text-decoration: underline;
-  font-size: 27px;
-}
-
-#wrapper {
-  width: 1120px;
-  height: 1700px;
-  background-color: black;
-}
-
-#logo {
-  margin-bottom: 30px;
-}
-
-#content {
-  width: 1020px;
-}
-
-#nav {
-  position: relative;
-  width: 920px;
-  margin: auto;
-}
-
-#challenge {
-  width: 320px;
-}
-
-#webdevstack {
-  position: absolute;
-  top: 0px;
-  left: 550px;
-  width: 325px;
-}
-
-#main-content {
-  position: relative;
-  margin-top: 100px;
-}
-
-#motd {
-  position: relative;
-}
-
-#main-pic {
-  position: absolute;
-  top: 30px;
-  right: 30px;
-}
-
-#main-pic-msg {
-  position: relative;
-  bottom: 0px;
-  width: 234px;
-  background-color: gray;
-  color: white;
-}
-
-#practice {
-  position: relative;
-  margin-top: 150px;
-}
-
-#icons {
-  position: relative;
-  margin-top: 100px;
-}
-
-#icon-1 {
-  position: absolute;
-  top: 0px;
-}
-
-#icon-2 {
-  position: absolute;
-  left: 275px;
-}
-
-#icon-3 {
-  position: absolute;
-  left: 550px;
-}
-
-#icon-4 {
-  position: absolute;
-  left: 825px;
-}
-
-#end {
-  position: relative;
-  top: 250px;
-}
-
-/* .bd {
-  border: 1px solid white;
-} */
-
-.bg-main {
-  background-color: #232323;
-}
-
-.bg-white {
-  background-color: white;
-}
-
-.pad {
-  padding: 25px;
-}
-
-.mrg-au {
-  margin: auto;
-}
-
-.mrg-l {
-  margin-left: 25px;
-}
-
-.mrg-r {
-  margin-right: 25px;
-}
-
-.mrg-big-l {
-  margin-left: 75px;
-}
-
-.mrg-big-r {
-  margin-right: 85px;
-}
-
-.mrg-cnt-v {
-  margin: 25px 0;
-}
-
-.t-cnt {
+p {
   text-align: center;
-}
-
-.text-pad {
-  padding: 10px;
-}
-
-.text-big {
-  font-size: 60px;
-}
-
-.text-big-2 {
-  font-size: 50px;
-}
-
-.text-normal {
   font-size: 17px;
 }
 
-.text-normal-big {
-  font-size: 27px;
+.main {
+  width: 70%;
+  height: 900px;
+  border: 3px solid red;
+  margin: auto;
 }
 
-.text-gray {
-  color: gray;
+.header {
+  width: 70%;
+  height: 12%;
+  border: 3px solid red;
+  margin: auto;
 }
 
-.text-red {
-  color: red;
+.logo {
+  float: left;
+  width: 35%;
+  height: 100px;
+  border: 3px solid green;
 }
 
-.btn-pad {
-  padding: 10px 15px;
+.nav {
+  float: right;
+  width: 35%;
+  height: 100px;
+  border: 3px solid blue;
 }
 
-.btn-blue {
-  background-color: blue;
-  transition-duration: 0.5s;
-  color: white;
+.main-content {
+  height: 57%;
+  width: auto;
+  margin: auto;
+  border: 3px solid green;
 }
 
-.btn-blue:hover {
-  background-color: white;
-  color: black;
+.sidebar {
+  width: 24%;
+  height: 88%;
+  border: 3px solid teal;
+  float:left;
 }
 
-.btn-gray {
-  background-color: #808080;
-  transition-duration: 0.5s;
-  color: white;
+.content {
+  width: 75%;
+  height: 88%;
+  border: 3px solid gray;
+  float: right;
+  margin: auto;
 }
 
-.btn-gray:hover {
-  background-color: white;
-  color: black;
+.footer {
+  height: 10%;
+  border: 3px solid purple;
 }
 
-.btn-green {
-  background-color: #00FF00;
-  transition-duration: 0.5s;
-  color: white;
+.spacer-v {
+  height: 10%;
+  border: 3px solid yellow;
 }
 
-.btn-green:hover {
-  background-color: white;
-  color: black;
+.clear {
+  clear: both;
 }
 
-.rounded {
-  border-radius: 10px;
-}
-
-.icon {
-  width: 150px;
-  height: 150px;
+.t-cnt{
+  text-align: center;
 }
