--- a/style.css
+++ b/style.css
@@ -3,85 +3,78 @@
   font-family: monospace;
 }
 
-div ul {
-  display: inline-block;
-  list-style-type: none;
-}
-
-div li {
-  padding: 20px;
-  float: left;
-}
-
-p {
-  text-align: center;
-  font-size: 17px;
-}
-
-.main {
+.container-1 {
+  display: flex;
+  /*flex-wrap: wrap;*/
+  /* align-items: center;
+  align-items: flex-end;
+  align-items: flex-start;
+  align-items: stretch; //DEFAULT */
+  /* flex-direction: column; */
+  /* flex-direction: row; // DEFAULT */
+  flex-direction: row;
+  align-items: flex-start;
   width: 70%;
-  height: 900px;
-  border: 3px solid red;
+  min-height: 200px;
+  border: 3px solid black;
   margin: auto;
 }
 
-.header {
+.container-2 {
+  display: flex;
+  align-items: center;
   width: 70%;
-  height: 12%;
-  border: 3px solid red;
-  margin: auto;
-}
-
-.logo {
-  float: left;
-  width: 35%;
-  height: 100px;
-  border: 3px solid green;
-}
-
-.nav {
-  float: right;
-  width: 35%;
-  height: 100px;
+  min-height: 200px;
   border: 3px solid blue;
-}
-
-.main-content {
-  height: 57%;
-  width: auto;
   margin: auto;
-  border: 3px solid green;
 }
 
-.sidebar {
-  width: 24%;
-  height: 88%;
+.container-3 {
+  display: flex;
+  align-items: flex-end;
+  width: 70%;
+  min-height: 200px;
   border: 3px solid teal;
-  float:left;
-}
-
-.content {
-  width: 75%;
-  height: 88%;
-  border: 3px solid gray;
-  float: right;
   margin: auto;
 }
 
-.footer {
-  height: 10%;
-  border: 3px solid purple;
-}
-
-.spacer-v {
-  height: 10%;
-  border: 3px solid yellow;
-}
-
-.clear {
-  clear: both;
-}
 
 .t-cnt{
   text-align: center;
+}
+
+.box {
+
+  border: 3px solid springgreen;
+}
+
+.box-item {
+  flex: 1;
+}
+
+.box1 {
+  flex: 1;
+}
+
+.box2 {
+  flex: 1;
+}
+
+.box3 {
+  flex: 1;
+}
+
+.box7 {
+  flex: 1;
+  order: 2;
+}
+
+.box8 {
+  flex: 1;
+  order: 3;
+}
+
+.box9 {
+  flex: 1;
+  order: 1;
 }
